9/4일 수업 내용 커밋

--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="HelloWorld.cpp" />
     <ClCompile Include="lesson0902.cpp" />
     <ClCompile Include="lesson0903.cpp" />
+    <ClCompile Include="lesson0904.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
