--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -128,9 +128,12 @@
     <ClCompile Include="lesson0902.cpp" />
     <ClCompile Include="lesson0903.cpp" />
     <ClCompile Include="lesson0904.cpp" />
+    <ClCompile Include="lesson0905.cpp" />
+    <ClCompile Include="TestMath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
+    <ClInclude Include="TestMath.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
