--- a/HelloWorld/HelloWorld.vcxproj.filters
+++ b/HelloWorld/HelloWorld.vcxproj.filters
@@ -39,12 +39,18 @@
     <ClCompile Include="TestMath.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="practice0905.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TestMath.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="practice0905.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
