주말과제 파일 추가

--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="header.cpp" />
     <ClCompile Include="HelloWorld.cpp" />
+    <ClCompile Include="HW0906.cpp" />
     <ClCompile Include="lesson0902.cpp" />
     <ClCompile Include="lesson0903.cpp" />
     <ClCompile Include="lesson0904.cpp" />
@@ -134,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
+    <ClInclude Include="HW0906.h" />
     <ClInclude Include="practice0905.h" />
     <ClInclude Include="TestMath.h" />
   </ItemGroup>
