--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -130,13 +130,15 @@
     <ClCompile Include="lesson0903.cpp" />
     <ClCompile Include="lesson0904.cpp" />
     <ClCompile Include="lesson0905.cpp" />
-    <ClCompile Include="practice0905.cpp" />
+    <ClCompile Include="lesson0908.cpp" />
+    <ClCompile Include="Practice0905.cpp" />
     <ClCompile Include="TestMath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
     <ClInclude Include="HW0906.h" />
-    <ClInclude Include="practice0905.h" />
+    <ClInclude Include="lesson0908.h" />
+    <ClInclude Include="Practice0905.h" />
     <ClInclude Include="TestMath.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
