--- a/HelloWorld/HelloWorld.vcxproj.filters
+++ b/HelloWorld/HelloWorld.vcxproj.filters
@@ -39,10 +39,13 @@
     <ClCompile Include="TestMath.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="practice0905.cpp">
+    <ClCompile Include="Practice0905.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="HW0906.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="lesson0908.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,10 +56,13 @@
     <ClInclude Include="TestMath.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="practice0905.h">
+    <ClInclude Include="Practice0905.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="HW0906.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="lesson0908.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
