미로 게임 너무 어려우어어어어엉

--- a/HelloWorld/HelloWorld.vcxproj.filters
+++ b/HelloWorld/HelloWorld.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="EscapeMaze.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="lesson0911.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
@@ -81,6 +84,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="EscapeMaze.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="lesson0911.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
