--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="lesson0908.cpp" />
     <ClCompile Include="lesson0909.cpp" />
     <ClCompile Include="lesson0910.cpp" />
+    <ClCompile Include="lesson0911.cpp" />
     <ClCompile Include="Practice0905.cpp" />
     <ClCompile Include="TestMath.cpp" />
   </ItemGroup>
@@ -144,6 +145,7 @@
     <ClInclude Include="lesson0908.h" />
     <ClInclude Include="lesson0909.h" />
     <ClInclude Include="lesson0910.h" />
+    <ClInclude Include="lesson0911.h" />
     <ClInclude Include="Practice0905.h" />
     <ClInclude Include="TestMath.h" />
   </ItemGroup>
