--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="baekjoon.cpp" />
+    <ClCompile Include="BlackJack.cpp" />
     <ClCompile Include="EscapeMaze.cpp" />
     <ClCompile Include="header.cpp" />
     <ClCompile Include="HelloWorld.cpp" />
@@ -138,11 +139,14 @@
     <ClCompile Include="lesson0910.cpp" />
     <ClCompile Include="lesson0911.cpp" />
     <ClCompile Include="lesson0912.cpp" />
+    <ClCompile Include="lesson0915.cpp" />
+    <ClCompile Include="Position.cpp" />
     <ClCompile Include="Practice0905.cpp" />
     <ClCompile Include="TestMath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="baekjoon.h" />
+    <ClInclude Include="BlackJack.h" />
     <ClInclude Include="EscapeMaze.h" />
     <ClInclude Include="header.h" />
     <ClInclude Include="HW0906.h" />
@@ -152,6 +156,8 @@
     <ClInclude Include="lesson0910.h" />
     <ClInclude Include="lesson0911.h" />
     <ClInclude Include="lesson0912.h" />
+    <ClInclude Include="lesson0915.h" />
+    <ClInclude Include="Position.h" />
     <ClInclude Include="Practice0905.h" />
     <ClInclude Include="TestMath.h" />
   </ItemGroup>
