--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -129,8 +129,10 @@
     <ClCompile Include="BlackJack.cpp" />
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="Cat.cpp" />
+    <ClCompile Include="Dog.cpp" />
     <ClCompile Include="EscapeMaze.cpp" />
     <ClCompile Include="Goblin.cpp" />
+    <ClCompile Include="Hawk.cpp" />
     <ClCompile Include="header.cpp" />
     <ClCompile Include="HelloWorld.cpp" />
     <ClCompile Include="HW0906.cpp" />
@@ -146,12 +148,14 @@
     <ClCompile Include="lesson0912.cpp" />
     <ClCompile Include="lesson0915.cpp" />
     <ClCompile Include="lesson0916.cpp" />
+    <ClCompile Include="lesson0917.cpp" />
     <ClCompile Include="MazePlayer.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Oak.cpp" />
     <ClCompile Include="Position.cpp" />
     <ClCompile Include="Practice0905.cpp" />
     <ClCompile Include="Rabbit.cpp" />
+    <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Skeleton.cpp" />
     <ClCompile Include="TestMath.cpp" />
     <ClCompile Include="Tiger.cpp" />
@@ -164,11 +168,15 @@
     <ClInclude Include="BlackJack.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="Cat.h" />
+    <ClInclude Include="Dog.h" />
     <ClInclude Include="EscapeMaze.h" />
     <ClInclude Include="Goblin.h" />
+    <ClInclude Include="Hawk.h" />
     <ClInclude Include="header.h" />
     <ClInclude Include="HW0906.h" />
     <ClInclude Include="HW0913.h" />
+    <ClInclude Include="ICanBattle.h" />
+    <ClInclude Include="IFlyable.h" />
     <ClInclude Include="lesson0908.h" />
     <ClInclude Include="lesson0909.h" />
     <ClInclude Include="lesson0910.h" />
@@ -176,14 +184,17 @@
     <ClInclude Include="lesson0912.h" />
     <ClInclude Include="lesson0915.h" />
     <ClInclude Include="lesson0916.h" />
+    <ClInclude Include="lesson0917.h" />
     <ClInclude Include="MazePlayer.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Oak.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="Practice0905.h" />
     <ClInclude Include="Rabbit.h" />
+    <ClInclude Include="Shape.h" />
     <ClInclude Include="Skeleton.h" />
     <ClInclude Include="TestMath.h" />
+    <ClInclude Include="TestSample.h" />
     <ClInclude Include="Tiger.h" />
     <ClInclude Include="Zombie.h" />
   </ItemGroup>
