--- a/HelloWorld/HelloWorld.vcxproj.filters
+++ b/HelloWorld/HelloWorld.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="LinkedList.cpp">
       <Filter>소스 파일\자료구조</Filter>
     </ClCompile>
+    <ClCompile Include="PracticeLinkedList.cpp">
+      <Filter>소스 파일\자료구조</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
@@ -264,6 +267,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="LinkedList.h">
+      <Filter>소스 파일\자료구조</Filter>
+    </ClInclude>
+    <ClInclude Include="PracticeLinkedList.h">
       <Filter>소스 파일\자료구조</Filter>
     </ClInclude>
   </ItemGroup>
