--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Cat.cpp" />
     <ClCompile Include="Dog.cpp" />
     <ClCompile Include="EscapeMaze.cpp" />
+    <ClCompile Include="FixedStack.cpp" />
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="Hawk.cpp" />
     <ClCompile Include="header.cpp" />
@@ -150,6 +151,7 @@
     <ClCompile Include="lesson0916.cpp" />
     <ClCompile Include="lesson0917.cpp" />
     <ClCompile Include="lesson0918.cpp" />
+    <ClCompile Include="lesson0919.cpp" />
     <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="MazePlayer.cpp" />
     <ClCompile Include="Monster.cpp" />
@@ -173,6 +175,7 @@
     <ClInclude Include="Cat.h" />
     <ClInclude Include="Dog.h" />
     <ClInclude Include="EscapeMaze.h" />
+    <ClInclude Include="FixedStack.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Hawk.h" />
     <ClInclude Include="header.h" />
@@ -189,6 +192,7 @@
     <ClInclude Include="lesson0916.h" />
     <ClInclude Include="lesson0917.h" />
     <ClInclude Include="lesson0918.h" />
+    <ClInclude Include="lesson0919.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="MazePlayer.h" />
     <ClInclude Include="Monster.h" />
