--- a/HelloWorld/HelloWorld.vcxproj.filters
+++ b/HelloWorld/HelloWorld.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="CircularQueue.cpp">
       <Filter>소스 파일\자료구조</Filter>
     </ClCompile>
+    <ClCompile Include="CircularQueue2.cpp">
+      <Filter>소스 파일\자료구조</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
@@ -288,6 +291,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CircularQueue.h">
+      <Filter>소스 파일\자료구조</Filter>
+    </ClInclude>
+    <ClInclude Include="CircularQueue2.h">
       <Filter>소스 파일\자료구조</Filter>
     </ClInclude>
   </ItemGroup>
